--- a/style.css
+++ b/style.css
@@ -339,6 +339,10 @@ h4 {
     margin: 0 auto;
 }
 
+.logo-container {
+    padding: 4em 0 0 ;
+}
+
 .footer-logo {
     padding: 3em 0;
     width: 50%;
@@ -346,25 +350,38 @@ h4 {
 
 .footer_links {
     display: flex;
+    margin: 0 auto;
 }
 
 .footer__items {
     color: var(--white);
     text-align: center;
+    font-size: var(--primary-font-size);
     margin: 0 auto;
+}
+
+.socials {
+    margin: 0 auto;
+    text-align: center;
+
 }
 
 .social_list {
     display: flex;
+
     margin: 0 auto;
     width: 60%;
+    
 }
 
 .social_links {
     margin: 0 auto;
     text-align: center;
-    padding-top: 4em;
+    padding: 0 .7em 0;
+    
 }
+
+
 /* ----------- */
 
 
